<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e5e5e5"
    android:padding="16dp"
    tools:context=".fragments.details.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp">

        <View
            android:id="@+id/topBorder"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#673bb8"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_poster" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/default_movieTitle"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMainDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/default_movieDetails" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/default_movieGenres" />

        <TextView
            android:id="@+id/tvPlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_moviePlot" />

        <TextView
            android:id="@+id/tvDirectorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Director:"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_movieDirectors" />

        <TextView
            android:id="@+id/tvWriterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Writer:"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWriter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_movieWriters" />

        <TextView
            android:id="@+id/tvActorsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Actors:"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvActors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_movieActors" />

        <TextView
            android:id="@+id/tvAwardsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Awards:"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAwards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_movieAwards" />

        <TextView
            android:id="@+id/tvRatingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Ratings:"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvImdbRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_imdbRating" />

        <TextView
            android:id="@+id/tvRottenTomatoesRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_rottenTomatoesRating" />

        <TextView
            android:id="@+id/tvMetacriticRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_metacriticRating" />

        <TextView
            android:id="@+id/boxOfficeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Box Office:"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBoxOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/default_boxOfficeAmount" />

        <View
            android:id="@+id/bottomBorder"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#673bb8"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>
</ScrollView>